mobile overflow fix attempt

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 
-html, body {
+.hide-overlay {
     overflow-x: hidden;
 }
 
